styling location button on mobile fix

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -314,6 +314,7 @@ textarea:focus {
 
 .locationWrap div {
     height: 100%;
+    width: 3rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
